// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package testpkg;

message Test2 {
    // field1 is a field
    int32 field1 = 1;

    // an array of strings
    repeated string str = 2;

    double field3 = 3;
    float field4 = 4;
    fixed32 field5 = 5;
    sfixed32 field6 = 6;
    sint32 field7 = 7;
    uint32 field8 = 8;
}
