// Copyright 2018 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.tools.test;

option go_package = "generated";

import "external.proto";

// ensure no MarshalJSON/UnmarshalJSON fuctions are created
message NoOneof {
    uint32 fieldA = 1;
    string fieldB = 2;
}

// verify simple case: message with oneof
message SimpleOneof {
    oneof fieldA {
        string name = 1;
        uint32 number = 2;
    }
}

// verify nested case: message with nested message with oneof
message NestedOneof {
    uint32 fieldA = 1;
    message Nested {
        oneof OneOf {
            string name = 1;
            uint32 number = 2;
        }
    }
    Nested fieldB = 2;
}

// verify no MarshalJSON/UnmarshalJSON functions are created for referenced oneof
message ReferencedOneof {
    string fieldA = 1;
    NestedOneof.Nested fieldB = 2;
}

// verify no MarshalJSON/UnmarshalJSON functions are created for imported oneof
message ImportedReference {
    uint32 fieldA = 1;
    ExternalOneof fieldB = 2;
}